tests/files/flow_controller_tests/should_run/049.cmdr
x = 4.0;
print sqrt(x);