tests/files/flow_controller_tests/should_fail/020.cmdr
x = "cat";
print sqrt(x);